fixed add menu on mobile

--- a/src/App-mobile.css
+++ b/src/App-mobile.css
@@ -85,6 +85,7 @@ a{
   height: 30px;
   background-color: gray;
   border: 1px solid gray;
+  color: #ffffff;
 }
 #warningBlock{
     font-size: .8rem;
